--- a/src/scss/global/_reset.scss
+++ b/src/scss/global/_reset.scss
@@ -19,7 +19,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
   line-height: 1; }
  
-ol, ul {
+ol, ul, li {
   list-style: none; }
  
 blockquote, q {
