--- a/src/scss/layout/_frontcontainer.scss
+++ b/src/scss/layout/_frontcontainer.scss
@@ -7,6 +7,13 @@
 		font-size: 12px;
 		text-transform: uppercase;
 	}
+	.logo {
+		$size: 50px;
+		width: $size;
+		height: $size;
+		margin: 0 auto;
+		margin-top: $overallMargin;
+	}
 	#menu {
 		width: 90%;
 		position: absolute;
