architecture base page added

--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -3,14 +3,14 @@ html, body {
     padding: 0;
     margin: 0;
     font-family: "CircularBook";
-    background-color: white;
+    background-color: black;
     color: black;
 }
 
 html {
     @extend .full;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 #app-container  {
@@ -43,20 +43,7 @@ html {
     }
 }
 
-.page-wrapper {
-    @extend .full;
-    position: absolute;
-
-    .elements-holder {
-        @extend .full;
-        position: absolute;
-        z-index: 2;
-        top: 0;
-        left: 0;
-    }
-}
-
 .canvas-holder {
-    position: absolute;
+    position: fixed;
     @extend .top-left;
 }
