quintessentially page animation added

--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -10,7 +10,7 @@ html, body {
 html {
     @extend .full;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 #app-container  {
