physics world in place

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,5 +14,5 @@
 @import "pages/_work-of-art.scss";
 @import "pages/_architecture.scss";
 @import "pages/_quintessentially.scss";
-@import "pages/_eclectic.scss";
+@import "pages/_creativity-innovation.scss";
 @import "pages/_stylish.scss";
