adding animations, fixing stuff

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,4 +15,4 @@
 @import "pages/_architecture.scss";
 @import "pages/_quintessentially.scss";
 @import "pages/_creativity-innovation.scss";
-@import "pages/_stylish.scss";
+@import "pages/_style.scss";
